# test_fem

./: main.py  pyproject.toml
test_fem/fem/: cards_import.py  element_parameters.py  fem.py  fem_base.py  read.py
test_fem/fem/cards/: gcoord.py  gelmnt1.py  gnode.py  util_func.py
test_fem/fem/func/: func_template.py  node_func.py
tests/: test_gcoord.py
