[tool.poetry]
name = "test-fem"
version = "0.1.0"
description = ""
authors = ["sveinomork <62790668+sveinomork@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
vectormath = "^0.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
